--- a/old_code/index.html
+++ b/old_code/index.html
@@ -168,6 +168,7 @@
                 <p>
                     <canvas id="myChart" width="400" height="400"></canvas>
                 </p>
+            </article>    
         </section>   
         <section>
             <body>
